[package]
name = "ingestr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
plist = "1"
serde_json = "1.0"
tempfile = "3"
threadpool = "1"
tantivy = "0.17"
