[package]
name = "memex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
anyhow = "1"
plist = "1"
serde_json = "1.0"
tempfile = "3"
tantivy = "0.17"
iron = "0.6"
persistent = "0.4"
urlencoded = "0.6"
mount = "0.4"
ignore = "0.4"
chan = "0.1"
serde_derive = "1.0"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
lto = true
